[tool.poetry]
name = "guard"
version = "0.1.0"
description = "A light alternative for Sentry"
authors = ["long2ice <long2ice@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
better-exceptions = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
